# Wc-in-cpp

./: CMakeLists.txt  main.cpp
src/: Counter.cpp  Counter.h  Filecounter.cpp  Filecounter.h  Options.cpp  Options.h
